<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/bluetooth_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bluetooth_string" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Configuration" />

    <Button
        android:id="@+id/bluetooth_settings_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bluetooth Settings" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Paired device(s)" />

    <Spinner
        android:id="@+id/ID_PAIRED_DEVICES"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Link" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bluetooth_connect_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect_string" />

        <Button
            android:id="@+id/bluetooth_disconnect_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disconnect_string"/>
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Control(s)" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/bluetooth_open_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_button" />

        <Button
            android:id="@+id/bluetooth_lock_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lock_button" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/status"/>

    <TextView
        android:id="@+id/ID_STATUS"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/waiting_status" />

</LinearLayout>