<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/camera_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera" />

    <WebView
        android:id="@+id/camera_webview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/snapshot_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/snapshot_btn" />

        <Button
            android:id="@+id/autoupdate_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/autoupdate_btn" />

    </LinearLayout>

</LinearLayout>